<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/editTax"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="9.5"
        android:textAlignment="viewEnd"
        android:textColor="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/editWeightCharge"
        app:layout_constraintTop_toBottomOf="@+id/textWeightCharge" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <TextView
        android:id="@+id/textDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="48dp"
        android:text="@string/discount"
        app:layout_constraintBottom_toTopOf="@+id/editDiscount"
        app:layout_constraintStart_toEndOf="@+id/textPrice"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <TextView
        android:id="@+id/textDiscounted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/discounted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDiscount"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrice" />

    <EditText
        android:id="@+id/editDiscount"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/editPrice"
        app:layout_constraintTop_toBottomOf="@+id/textDiscount" />

    <TextView
        android:id="@+id/textAfterTaxed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/after_taxed"
        app:layout_constraintStart_toEndOf="@+id/editFee"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <TextView
        android:id="@+id/textGr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="34dp"
        android:text="@string/gr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAfterTaxed" />

    <EditText
        android:id="@+id/editGr"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toEndOf="@+id/textGr"
        app:layout_constraintTop_toBottomOf="@+id/textAfterTaxed" />

    <TextView
        android:id="@+id/textKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:text="@string/kg"
        app:layout_constraintEnd_toStartOf="@+id/editKg"
        app:layout_constraintStart_toEndOf="@+id/editGr"
        app:layout_constraintTop_toBottomOf="@+id/textAfterTaxed" />

    <EditText
        android:id="@+id/editKg"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="63dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0.1"
        android:textAlignment="viewEnd"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAfterTaxed" />

    <TextView
        android:id="@+id/textUSVN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:text="@string/us_vn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGr" />

    <TextView
        android:id="@+id/textVND1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="36dp"
        android:text="@string/vnd"
        app:layout_constraintStart_toEndOf="@+id/textViewUSVNResult"
        app:layout_constraintTop_toBottomOf="@+id/textGr" />

    <TextView
        android:id="@+id/textUSShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/us_ship"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUSVN" />

    <EditText
        android:id="@+id/editUSShip"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toEndOf="@+id/textUSShip"
        app:layout_constraintTop_toBottomOf="@+id/textUSVN" />

    <TextView
        android:id="@+id/textVND2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/vnd"
        app:layout_constraintStart_toEndOf="@+id/editUSShip"
        app:layout_constraintTop_toBottomOf="@+id/textUSVN" />

    <TextView
        android:id="@+id/textRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVND2" />

    <TextView
        android:id="@+id/textWeightCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:text="@string/weight_charge"
        app:layout_constraintStart_toEndOf="@+id/textRate"
        app:layout_constraintTop_toBottomOf="@+id/textVND2" />

    <TextView
        android:id="@+id/textTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVND2" />

    <EditText
        android:id="@+id/editRate"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="23900"
        android:textAlignment="viewEnd"
        android:textColor="#FF9800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWeightCharge" />

    <EditText
        android:id="@+id/editWeightCharge"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="15"
        android:textAlignment="viewEnd"
        android:textColor="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/editRate"
        app:layout_constraintTop_toBottomOf="@+id/textWeightCharge" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textResult"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="31dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#F11A0B"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="Fee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <EditText
        android:id="@+id/editFee"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="5"
        android:textAlignment="viewEnd"
        android:textColor="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/textFee"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <TextView
        android:id="@+id/textDiscoutedResult"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/editDiscount"
        app:layout_constraintTop_toBottomOf="@+id/textDiscounted" />

    <TextView
        android:id="@+id/textAfterTaxedResult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#0A2DE4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textAfterTaxed"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <TextView
        android:id="@+id/textViewVNDResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textVND1"
        app:layout_constraintTop_toBottomOf="@+id/textGr" />

    <TextView
        android:id="@+id/textViewVNDResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textVND2"
        app:layout_constraintTop_toBottomOf="@+id/textUSVN" />

    <TextView
        android:id="@+id/textViewUSVNResult"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:text="0"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/textVND1"
        app:layout_constraintStart_toEndOf="@+id/textUSVN"
        app:layout_constraintTop_toBottomOf="@+id/textGr" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="36dp"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="56dp"
        android:text="Fee %"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editFeePercent"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>